src/objects/FMP_Target__c.object
<CustomObject>
    <fields>
        <fullName>FMP_Diagnostic__c</fullName>
        <label>FMP Diagnostic</label>
        <referenceTo>FMP_Diagnostic__c</referenceTo>
        <relationshipLabel>FMP_Targets_Diagnostic</relationshipLabel>
        <relationshipName>FMP_Targets_Diagnostic</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FMP_Target_location__c</fullName>
        <label>FMP Target location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FaunaFloraRecoveryPlan__c</fullName>
        <label>FaunaFloraRecoveryPlan</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>FMP_Targets_Submission</relationshipLabel>
        <relationshipName>FMP_Targets_Submission</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>adequateTransportation__c</fullName>
        <label>adequateTransportation</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>channelsScamperOk__c</fullName>
        <label>channelsScamperOk</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>checklist__c</fullName>
        <label>checklist</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>coffeeDryingSystemOk__c</fullName>
        <label>coffeeDryingSystemOk</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>coffeePackaging__c</fullName>
        <label>coffeePackaging</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>controlAccordingMonitoring__c</fullName>
        <label>controlAccordingMonitoring</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>evaluationPulping__c</fullName>
        <label>evaluationPulping</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>farmMap__c</fullName>
        <label>farmMap</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fermentationTanksOk__c</fullName>
        <label>fermentationTanksOk</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>followFaunaFloraRecoveryPlan__c</fullName>
        <formula>IF( FMP_Diagnostic__r.FaunaFloraRecoveryPlan__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.FaunaFloraRecoveryPlan__c= &quot;No cumple&quot; &amp;&amp; TEXT(FaunaFloraRecoveryPlan__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followFaunaFloraRecoveryPlan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followadequateTransportation__c</fullName>
        <formula>IF( FMP_Diagnostic__r.adequateTransportation__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.adequateTransportation__c= &quot;No cumple&quot; &amp;&amp; TEXT(adequateTransportation__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followadequateTransportation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followchannelsScamperOk__c</fullName>
        <formula>IF( FMP_Diagnostic__r.channelsScamperOk__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.channelsScamperOk__c= &quot;No cumple&quot; &amp;&amp; TEXT(channelsScamperOk__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followchannelsScamperOk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followchecklist__c</fullName>
        <formula>IF( FMP_Diagnostic__r.checklist__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.checklist__c= &quot;No cumple&quot; &amp;&amp; TEXT(checklist__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followchecklist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followcoffeeDryingSystemOk__c</fullName>
        <formula>IF( FMP_Diagnostic__r.coffeeDryingSystemOk__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.coffeeDryingSystemOk__c= &quot;No cumple&quot; &amp;&amp; TEXT(coffeeDryingSystemOk__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followcoffeeDryingSystemOk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followcoffeePackaging__c</fullName>
        <formula>IF( FMP_Diagnostic__r.coffeePackaging__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.coffeePackaging__c= &quot;No cumple&quot; &amp;&amp; TEXT(coffeePackaging__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followcoffeePackaging</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followcontrolAccordingMonitoring__c</fullName>
        <formula>IF( FMP_Diagnostic__r.controlAccordingMonitoring__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.controlAccordingMonitoring__c= &quot;No cumple&quot; &amp;&amp; TEXT(controlAccordingMonitoring__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followcontrolAccordingMonitoring</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followevaluationPulping__c</fullName>
        <formula>IF( FMP_Diagnostic__r.evaluationPulping__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.evaluationPulping__c= &quot;No cumple&quot; &amp;&amp; TEXT(evaluationPulping__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followevaluationPulping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followfarmMap__c</fullName>
        <formula>IF( FMP_Diagnostic__r.farmMap__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.farmMap__c= &quot;No cumple&quot; &amp;&amp; TEXT(farmMap__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followfarmMap</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followfermentationTanksOk__c</fullName>
        <formula>IF( FMP_Diagnostic__r.fermentationTanksOk__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.fermentationTanksOk__c= &quot;No cumple&quot; &amp;&amp; TEXT(fermentationTanksOk__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followfermentationTanksOk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followfriendlyMethodsReducingHerbicide__c</fullName>
        <formula>IF( FMP_Diagnostic__r.friendlyMethodsReducingHerbicide__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.friendlyMethodsReducingHerbicide__c= &quot;No cumple&quot; &amp;&amp; TEXT(friendlyMethodsReducingHerbicide__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followfriendlyMethodsReducingHerbicide</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followharvestEvaluation__c</fullName>
        <formula>IF( FMP_Diagnostic__r.harvestEvaluation__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.harvestEvaluation__c= &quot;No cumple&quot; &amp;&amp; TEXT(harvestEvaluation__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followharvestEvaluation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followharvestRecord__c</fullName>
        <formula>IF( FMP_Diagnostic__r.harvestRecord__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.harvestRecord__c= &quot;No cumple&quot; &amp;&amp; TEXT(harvestRecord__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followharvestRecord</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followhasProtectionEquipment__c</fullName>
        <formula>IF( FMP_Diagnostic__r.hasProtectionEquipment__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.hasProtectionEquipment__c= &quot;No cumple&quot; &amp;&amp; TEXT(hasProtectionEquipment__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followhasProtectionEquipment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followhoneyWaterTreatmentTank__c</fullName>
        <formula>IF( FMP_Diagnostic__r.honeyWaterTreatmentTank__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.honeyWaterTreatmentTank__c= &quot;No cumple&quot; &amp;&amp; TEXT(honeyWaterTreatmentTank__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followhoneyWaterTreatmentTank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followidentifyingErodedAreas__c</fullName>
        <formula>IF( FMP_Diagnostic__r.identifyingErodedAreas__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.identifyingErodedAreas__c= &quot;No cumple&quot; &amp;&amp; TEXT(identifyingErodedAreas__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followidentifyingErodedAreas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followimplemetationSeedbedPlan__c</fullName>
        <formula>IF( FMP_Diagnostic__r.implemetationSeedbedPlan__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.implemetationSeedbedPlan__c= &quot;No cumple&quot; &amp;&amp; TEXT(implemetationSeedbedPlan__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followimplemetationSeedbedPlan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followknowledgeAreasLots__c</fullName>
        <formula>IF( FMP_Diagnostic__r.knowledgeAreasLots__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.knowledgeAreasLots__c= &quot;No cumple&quot; &amp;&amp; TEXT(knowledgeAreasLots__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followknowledgeAreasLots</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followmakingMonitoringPestsDiseases__c</fullName>
        <formula>IF( FMP_Diagnostic__r.makingMonitoringPestsDiseases__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.makingMonitoringPestsDiseases__c= &quot;No cumple&quot; &amp;&amp; TEXT(makingMonitoringPestsDiseases__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followmakingMonitoringPestsDiseases</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followmonitoringRecordPestDisease__c</fullName>
        <formula>IF( FMP_Diagnostic__r.monitoringRecordPestDisease__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.monitoringRecordPestDisease__c= &quot;No cumple&quot; &amp;&amp; TEXT(monitoringRecordPestDisease__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followmonitoringRecordPestDisease</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followpostControlEvaluation__c</fullName>
        <formula>IF( FMP_Diagnostic__r.postControlEvaluation__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.postControlEvaluation__c= &quot;No cumple&quot; &amp;&amp; TEXT(postControlEvaluation__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followpostControlEvaluation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followproperCoffeeStorage__c</fullName>
        <formula>IF( FMP_Diagnostic__r.properCoffeeStorage__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.properCoffeeStorage__c= &quot;No cumple&quot; &amp;&amp; TEXT(properCoffeeStorage__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followproperCoffeeStorage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followproperSubstratesPreparation__c</fullName>
        <formula>IF( FMP_Diagnostic__r.properSubstratesPreparation__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.properSubstratesPreparation__c= &quot;No cumple&quot; &amp;&amp; TEXT(properSubstratesPreparation__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followproperSubstratesPreparation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followpulpCompostingPit__c</fullName>
        <formula>IF( FMP_Diagnostic__r.pulpCompostingPit__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.pulpCompostingPit__c= &quot;No cumple&quot; &amp;&amp; TEXT(pulpCompostingPit__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followpulpCompostingPit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followpulpingMachineOk__c</fullName>
        <formula>IF( FMP_Diagnostic__r.pulpingMachineOk__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.pulpingMachineOk__c= &quot;No cumple&quot; &amp;&amp; TEXT(pulpingMachineOk__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followpulpingMachineOk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followrecordHarvesting__c</fullName>
        <formula>IF( FMP_Diagnostic__r.recordHarvesting__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.recordHarvesting__c= &quot;No cumple&quot; &amp;&amp; TEXT(recordHarvesting__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followrecordHarvesting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followrecordOfLabor__c</fullName>
        <formula>IF( FMP_Diagnostic__r.recordOfLabor__c = &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.recordOfLabor__c = &quot;No cumple&quot; &amp;&amp; TEXT(recordOfLabor__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followrecordOfLabor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followrecordPesticideApplications__c</fullName>
        <formula>IF( FMP_Diagnostic__r.recordPesticideApplications__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.recordPesticideApplications__c= &quot;No cumple&quot; &amp;&amp; TEXT(recordPesticideApplications__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followrecordPesticideApplications</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followrecordPurchasingInputs__c</fullName>
        <formula>IF( FMP_Diagnostic__r.recordPurchasingInputs__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.recordPurchasingInputs__c= &quot;No cumple&quot; &amp;&amp; TEXT(recordPurchasingInputs__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followrecordPurchasingInputs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followrecordSalesCPS__c</fullName>
        <formula>IF( FMP_Diagnostic__r.recordSalesCPS__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.recordSalesCPS__c= &quot;No cumple&quot; &amp;&amp; TEXT(recordSalesCPS__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followrecordSalesCPS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followrecordVarietiesTreesPerLot__c</fullName>
        <formula>IF( FMP_Diagnostic__r.recordVarietiesTreesPerLot__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.recordVarietiesTreesPerLot__c= &quot;No cumple&quot; &amp;&amp; TEXT(recordVarietiesTreesPerLot__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followrecordVarietiesTreesPerLot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followrecordsAgrochemicalsApplications__c</fullName>
        <formula>IF( FMP_Diagnostic__r.recordsAgrochemicalsApplications__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.recordsAgrochemicalsApplications__c= &quot;No cumple&quot; &amp;&amp; TEXT(recordsAgrochemicalsApplications__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followrecordsAgrochemicalsApplications</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followrecoveryErodedAreas__c</fullName>
        <formula>IF( FMP_Diagnostic__r.recoveryErodedAreas__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.recoveryErodedAreas__c= &quot;No cumple&quot; &amp;&amp; TEXT(recoveryErodedAreas__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followrecoveryErodedAreas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followreforestationNativeSpecies__c</fullName>
        <formula>IF( FMP_Diagnostic__r.reforestationNativeSpecies__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.reforestationNativeSpecies__c= &quot;No cumple&quot; &amp;&amp; TEXT(reforestationNativeSpecies__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followreforestationNativeSpecies</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followregistrationWorkPerLot__c</fullName>
        <formula>IF( FMP_Diagnostic__r.registrationWorkPerLot__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.registrationWorkPerLot__c= &quot;No cumple&quot; &amp;&amp; TEXT(registrationWorkPerLot__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followregistrationWorkPerLot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followregulationOfShadow__c</fullName>
        <formula>IF( FMP_Diagnostic__r.regulationOfShadow__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.regulationOfShadow__c= &quot;No cumple&quot; &amp;&amp; TEXT(regulationOfShadow__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followregulationOfShadow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followseparationCoffeePerLot__c</fullName>
        <formula>IF( FMP_Diagnostic__r.separationCoffeePerLot__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.separationCoffeePerLot__c= &quot;No cumple&quot; &amp;&amp; TEXT(separationCoffeePerLot__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followseparationCoffeePerLot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followseparationCoffeeQuality__c</fullName>
        <formula>IF( FMP_Diagnostic__r.separationCoffeeQuality__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.separationCoffeeQuality__c= &quot;No cumple&quot; &amp;&amp; TEXT(separationCoffeeQuality__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followseparationCoffeeQuality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followtanksMucilageRemoverOk__c</fullName>
        <formula>IF( FMP_Diagnostic__r.tanksMucilageRemoverOk__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.tanksMucilageRemoverOk__c= &quot;No cumple&quot; &amp;&amp; TEXT(tanksMucilageRemoverOk__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followtanksMucilageRemoverOk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followtrainsStaffAgrochemicalsHandling__c</fullName>
        <formula>IF( FMP_Diagnostic__r.trainsStaffAgrochemicalsHandling__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.trainsStaffAgrochemicalsHandling__c= &quot;No cumple&quot; &amp;&amp; TEXT(trainsStaffAgrochemicalsHandling__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followtrainsStaffAgrochemicalsHandling</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followtransformationPulpsForUse__c</fullName>
        <formula>IF( FMP_Diagnostic__r.transformationPulpsForUse__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.transformationPulpsForUse__c= &quot;No cumple&quot; &amp;&amp; TEXT(transformationPulpsForUse__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followtransformationPulpsForUse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followuseProtectionEquipment__c</fullName>
        <formula>IF( FMP_Diagnostic__r.useProtectionEquipment__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.useProtectionEquipment__c= &quot;No cumple&quot; &amp;&amp; TEXT(useProtectionEquipment__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followuseProtectionEquipment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followusingControlMethodsForPYE__c</fullName>
        <formula>IF( FMP_Diagnostic__r.usingControlMethodsForPYE__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.usingControlMethodsForPYE__c= &quot;No cumple&quot; &amp;&amp; TEXT(usingControlMethodsForPYE__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followusingControlMethodsForPYE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followusingNativeSpeciesAsShading__c</fullName>
        <formula>IF( FMP_Diagnostic__r.usingNativeSpeciesAsShading__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.usingNativeSpeciesAsShading__c= &quot;No cumple&quot; &amp;&amp; TEXT(usingNativeSpeciesAsShading__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followusingNativeSpeciesAsShading</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followwarehouseSafety__c</fullName>
        <formula>IF( FMP_Diagnostic__r.warehouseSafety__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.warehouseSafety__c= &quot;No cumple&quot; &amp;&amp; TEXT(warehouseSafety__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followwarehouseSafety</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followwastewaterManagement__c</fullName>
        <formula>IF( FMP_Diagnostic__r.wastewaterManagement__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.wastewaterManagement__c= &quot;No cumple&quot; &amp;&amp; TEXT(wastewaterManagement__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followwastewaterManagement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followwetmillSafety__c</fullName>
        <formula>IF( FMP_Diagnostic__r.wetmillSafety__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.wetmillSafety__c= &quot;No cumple&quot; &amp;&amp; TEXT(wetmillSafety__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followwetmillSafety</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followwetmillWaterManagement__c</fullName>
        <formula>IF( FMP_Diagnostic__r.wetmillWaterManagement__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.wetmillWaterManagement__c= &quot;No cumple&quot; &amp;&amp; TEXT(wetmillWaterManagement__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followwetmillWaterManagement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followzarandaGoodCondition__c</fullName>
        <formula>IF( FMP_Diagnostic__r.zarandaGoodCondition__c= &quot;Cumple&quot;, &quot;Se cumplía en la Línea Base&quot;, IF( FMP_Diagnostic__r.zarandaGoodCondition__c= &quot;No cumple&quot; &amp;&amp; TEXT(zarandaGoodCondition__c)=&quot;Sí&quot;,&quot;No se cumplía y se fijaron metas&quot;, &quot;No se cumplía y no fijaron metas&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>followzarandaGoodCondition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>friendlyMethodsReducingHerbicide__c</fullName>
        <label>friendlyMethodsReducingHerbicide</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>harvestEvaluation__c</fullName>
        <label>harvestEvaluation</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>harvestRecord__c</fullName>
        <label>harvestRecord</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>hasProtectionEquipment__c</fullName>
        <label>hasProtectionEquipment</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>honeyWaterTreatmentTank__c</fullName>
        <label>honeyWaterTreatmentTank</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>